add ocserv user api
