# docs/swagger.json
@@ -4,6 +4,139 @@
         "contact": {}
     },
     "paths": {
+        "/api/v1/ocserv/": {
+            "post": {
+                "description": "Create Ocserv User",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "ocserv user"
+                ],
+                "summary": "Create Ocserv User",
+                "parameters": [
+                    {
+                        "description": "Request Body",
+                        "name": "site",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/ocserv.CreateOcservUserBody"
+                        }
+                    }
+                ],
+                "responses": {
+                    "201": {
+                        "description": "Created",
+                        "schema": {
+                            "$ref": "#/definitions/models.OcservUser"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request"
+                    }
+                }
+            }
+        },
+        "/api/v1/ocserv/:id/": {
+            "delete": {
+                "description": "Delete ocserv user",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "ocserv user"
+                ],
+                "summary": "Delete ocserv user",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Bearer token",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "204": {
+                        "description": "No Content"
+                    },
+                    "400": {
+                        "description": "Bad Request"
+                    },
+                    "404": {
+                        "description": "Not Found"
+                    }
+                }
+            },
+            "patch": {
+                "description": "Update Ocserv User",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "ocserv user"
+                ],
+                "summary": "Update Ocserv User",
+                "parameters": [
+                    {
+                        "description": "Request Body",
+                        "name": "site",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/ocserv.UpdateOcservUserBody"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/models.OcservUser"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request"
+                    },
+                    "404": {
+                        "description": "Not Found"
+                    }
+                }
+            }
+        },
+        "/api/v1/ocserv/:id/disconnect/": {
+            "post": {
+                "description": "Disconnect ocserv user",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "ocserv user"
+                ],
+                "summary": "Disconnect ocserv user",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Bearer token",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "202": {
+                        "description": "Accepted"
+                    },
+                    "400": {
+                        "description": "Bad Request"
+                    },
+                    "404": {
+                        "description": "Not Found"
+                    }
+                }
+            }
+        },
         "/api/v1/site/": {
             "get": {
                 "description": "Get site configuration",
@@ -42,7 +175,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/site.CreateData"
+                            "$ref": "#/definitions/site.CreateSiteBody"
                         }
                     }
                 ],
@@ -80,7 +213,7 @@
                         "name": "site",
                         "in": "body",
                         "schema": {
-                            "$ref": "#/definitions/site.UpdateData"
+                            "$ref": "#/definitions/site.UpdateSiteBody"
                         }
                     }
                 ],
@@ -117,7 +250,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/user.CreateData"
+                            "$ref": "#/definitions/user.CreateUserBody"
                         }
                     }
                 ],
@@ -125,7 +258,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/user.CreateResponse"
+                            "$ref": "#/definitions/user.CreateUserResponse"
                         }
                     },
                     "400": {
@@ -151,7 +284,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/user.CreateLoginData"
+                            "$ref": "#/definitions/user.CreateLoginBody"
                         }
                     }
                 ],
@@ -185,7 +318,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/user.UpdateData"
+                            "$ref": "#/definitions/user.UpdateUserPasswordBody"
                         }
                     },
                     {
@@ -223,7 +356,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/user.CreateStaffData"
+                            "$ref": "#/definitions/user.CreateUserBody"
                         }
                     },
                     {
@@ -238,7 +371,7 @@
                     "201": {
                         "description": "Created",
                         "schema": {
-                            "$ref": "#/definitions/user.CreateResponse"
+                            "$ref": "#/definitions/user.CreateUserResponse"
                         }
                     },
                     "400": {
@@ -261,15 +394,6 @@
                 ],
                 "summary": "Delete staff",
                 "parameters": [
-                    {
-                        "description": "Request Body",
-                        "name": "user",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/user.UpdateData"
-                        }
-                    },
                     {
                         "type": "string",
                         "description": "Bearer token",
@@ -308,7 +432,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/user.UpdateStaffPasswordData"
+                            "$ref": "#/definitions/user.UpdateStaffPasswordBody"
                         }
                     },
                     {
@@ -337,6 +461,68 @@
         }
     },
     "definitions": {
+        "models.OcservUser": {
+            "type": "object",
+            "properties": {
+                "created_at": {
+                    "type": "integer"
+                },
+                "default_traffic": {
+                    "type": "number"
+                },
+                "expire_at": {
+                    "type": "integer"
+                },
+                "group": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "integer"
+                },
+                "is_active": {
+                    "type": "boolean"
+                },
+                "is_online": {
+                    "type": "boolean"
+                },
+                "password": {
+                    "type": "string"
+                },
+                "rx": {
+                    "type": "number"
+                },
+                "traffic_type": {
+                    "$ref": "#/definitions/models.ServiceTypeEnum"
+                },
+                "tx": {
+                    "type": "number"
+                },
+                "updated_at": {
+                    "type": "integer"
+                },
+                "username": {
+                    "type": "string"
+                }
+            }
+        },
+        "models.ServiceTypeEnum": {
+            "type": "string",
+            "enum": [
+                "FREE",
+                "MONTHLY",
+                "TOTALLY"
+            ],
+            "x-enum-comments": {
+                "FREE": "The user uses the service without restrictions",
+                "MONTHLY": "The user uses the service with a monthly usage limit",
+                "TOTALLY": "The user uses the service with a limited Rx-TX"
+            },
+            "x-enum-varnames": [
+                "FREE",
+                "MONTHLY",
+                "TOTALLY"
+            ]
+        },
         "models.Site": {
             "type": "object",
             "properties": {
@@ -354,7 +540,94 @@
                 }
             }
         },
-        "site.CreateData": {
+        "ocserv.CreateOcservUserBody": {
+            "type": "object",
+            "required": [
+                "default_traffic",
+                "group",
+                "traffic_type",
+                "username"
+            ],
+            "properties": {
+                "default_traffic": {
+                    "type": "number"
+                },
+                "expire_at": {
+                    "type": "integer"
+                },
+                "group": {
+                    "type": "string"
+                },
+                "is_active": {
+                    "type": "boolean",
+                    "enum": [
+                        true,
+                        false
+                    ]
+                },
+                "password": {
+                    "type": "string",
+                    "maxLength": 12,
+                    "minLength": 4
+                },
+                "traffic_type": {
+                    "enum": [
+                        "FREE",
+                        "MONTHLY",
+                        "TOTALLY"
+                    ],
+                    "allOf": [
+                        {
+                            "$ref": "#/definitions/models.ServiceTypeEnum"
+                        }
+                    ]
+                },
+                "username": {
+                    "type": "string",
+                    "maxLength": 8,
+                    "minLength": 4
+                }
+            }
+        },
+        "ocserv.UpdateOcservUserBody": {
+            "type": "object",
+            "properties": {
+                "default_traffic": {
+                    "type": "number"
+                },
+                "expire_at": {
+                    "type": "integer"
+                },
+                "group": {
+                    "type": "string"
+                },
+                "is_active": {
+                    "type": "boolean",
+                    "enum": [
+                        true,
+                        false
+                    ]
+                },
+                "password": {
+                    "type": "string",
+                    "maxLength": 12,
+                    "minLength": 4
+                },
+                "traffic_type": {
+                    "enum": [
+                        "FREE",
+                        "MONTHLY",
+                        "TOTALLY"
+                    ],
+                    "allOf": [
+                        {
+                            "$ref": "#/definitions/models.ServiceTypeEnum"
+                        }
+                    ]
+                }
+            }
+        },
+        "site.CreateSiteBody": {
             "type": "object",
             "required": [
                 "default_traffic"
@@ -371,7 +644,7 @@
                 }
             }
         },
-        "site.UpdateData": {
+        "site.UpdateSiteBody": {
             "type": "object",
             "properties": {
                 "captcha_secret_key": {
@@ -385,22 +658,7 @@
                 }
             }
         },
-        "user.CreateData": {
-            "type": "object",
-            "required": [
-                "password",
-                "username"
-            ],
-            "properties": {
-                "password": {
-                    "type": "string"
-                },
-                "username": {
-                    "type": "string"
-                }
-            }
-        },
-        "user.CreateLoginData": {
+        "user.CreateLoginBody": {
             "type": "object",
             "required": [
                 "password",
@@ -418,7 +676,22 @@
                 }
             }
         },
-        "user.CreateResponse": {
+        "user.CreateUserBody": {
+            "type": "object",
+            "required": [
+                "password",
+                "username"
+            ],
+            "properties": {
+                "password": {
+                    "type": "string"
+                },
+                "username": {
+                    "type": "string"
+                }
+            }
+        },
+        "user.CreateUserResponse": {
             "type": "object",
             "required": [
                 "username"
@@ -429,21 +702,6 @@
                 },
                 "is_admin": {
                     "type": "boolean"
-                },
-                "username": {
-                    "type": "string"
-                }
-            }
-        },
-        "user.CreateStaffData": {
-            "type": "object",
-            "required": [
-                "password",
-                "username"
-            ],
-            "properties": {
-                "password": {
-                    "type": "string"
                 },
                 "username": {
                     "type": "string"
@@ -461,7 +719,18 @@
                 }
             }
         },
-        "user.UpdateData": {
+        "user.UpdateStaffPasswordBody": {
+            "type": "object",
+            "required": [
+                "password"
+            ],
+            "properties": {
+                "password": {
+                    "type": "string"
+                }
+            }
+        },
+        "user.UpdateUserPasswordBody": {
             "type": "object",
             "required": [
                 "current_password",
@@ -472,17 +741,6 @@
                     "type": "string"
                 },
                 "new_password": {
-                    "type": "string"
-                }
-            }
-        },
-        "user.UpdateStaffPasswordData": {
-            "type": "object",
-            "required": [
-                "password"
-            ],
-            "properties": {
-                "password": {
                     "type": "string"
                 }
             }
